[package]
name = "polkadot_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
subxt = { version = "0.38.0", default-features = false, features = ["jsonrpsee", "web"]}
yew = { version = "0.20.0", features = ["csr"] }
web-sys = "0.3.69"
hex = "0.4.3"
yew-router = "0.17.0"
js-sys = "0.3.69"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
anyhow = "1.0.71"
serde = "1.0.163"
serde_json = "1.0.96"